Requested changes (#99)